[package]
name = "cargo-bug"
version = "0.1.0"
readme = "./Readme.md"
authors = ["George Burton <burtonageo@gmail.com>"]

[profile.dev]
opt-level = 1
debug = true
lto = false
codegen-units = 4
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false

[dependencies]
apply = "~0.2"
conrod = "~0.14"
find_folder = "~0.2"
nalgebra = "~0.2"
piston = "~0.10"
piston-ai_behavior = "~0.8"
piston-viewport = "~0.1"
pistoncore-glutin_window = "~0.12"
piston2d-graphics = "~0.9"
piston2d-opengl_graphics = "~0.12"
piston2d-sprite = "~0.14"
rebind = "~0.0"

[dependencies.sorty]
git = "https://github.com/Wafflespeanut/rust-sorty"

[dependencies.clippy]
git = "https://github.com/Manishearth/rust-clippy.git"